2018-02-03  Bruno Haible  <bruno@clisp.org>

	Fix floatparam.h generation failure with gcc 7 on i386.
	GCC bug report: <https://gcc.gnu.org/bugzilla/show_bug.cgi?id=84190>.
	* floatparam.c (mainfn): Use 'volatile' in a few more places.

2018-02-03  Bruno Haible  <bruno@clisp.org>

	Update to the newest gnulib.
	Ran "make -f Makefile.devel build-aux-update gnulib-imported \
	&& make -f Makefile.devel build-prerequisites".
	* gllib/*: Update from gnulib.
	* glm4/*: Likewise.
	* aclocal.m4, src/configure: Regenerated.
	* modules/*/configure: Regenerated.

2018-01-28  Bruno Haible  <bruno@clisp.org>

	Tweak the usable address range on IRIX.
	* lispbibl.d (MAPPABLE_ADDRESS_RANGE_END) [UNIX_IRIX]: Change.

2018-01-28  Bruno Haible  <bruno@clisp.org>

	Fix failure of the builds with -DWIDE on IRIX/mips (n32 ABI).
	* makemake.in: When compiling with GCC for IRIX/mipsn32 and -DWIDE,
	reduce optimizations.

2018-01-28  Bruno Haible  <bruno@clisp.org>

	rawsock: Fix compilation error on IRIX.
	The <netinet/in.h> on IRIX 6.5 has only partial support for IPv6.
	* modules/rawsock/rawsock.c (RAWSOCK:CONVERT-ADDRESS): Test HAVE_IPV6,
	not AF_INET6.

2018-01-28  Bruno Haible  <bruno@clisp.org>

	syscalls: Fix a build failure on IRIX 6.5.
	IRIX 6.5 does not have the round() function.
	* modules/syscalls/calls.c (POSIX:LOADAVG): Don't use the round()
	function.

2018-01-28  Bruno Haible  <bruno@clisp.org>

	Fix build failure on IRIX.
	* clisp-link.in: Use placeholder @SHELL@.
	* makemake.in (clisp-link): Substitute a good shell for @SHELL@.

2018-01-28  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on HP-UX/ia64 in 64-bit mode.
	* Makefile.devel (multibuild-hpux-ia64-64): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For HP-UX/ia64 in 64-bit mode, enable all
	optimizations except ASM.

2018-01-28  Bruno Haible  <bruno@clisp.org>

	Choose working configuration on HP-UX/ia64 in 64-bit mode.