@@ -2977,17 +2977,18 @@ local void handle_close_errors (void* sp, gcv_object_t* frame, object label,
   else running_handle_close_errors = true;
   unwind_upto(frame);
 }
-#define MAYBE_IGNORE_ERRORS(abort,code)                                   \
-  if (abort) {                                                            \
-    var sp_jmp_buf returner; /* return point */                           \
-    running_handle_close_errors = false;                                  \
-    make_C_HANDLER_entry_frame(O(handler_for_error), handle_close_errors, \
-                              returner, goto end_ignore_errors; );        \
-  }                                                                       \
-  code;                                                                   \
-  if (abort) running_handle_close_errors = false;                         \
- end_ignore_errors:                                                       \
-  if (abort) { unwind_C_HANDLER_frame(); }
+#define MAYBE_IGNORE_ERRORS(abort,code)                                     \
+  { var sp_jmp_buf returner; /* return point */                             \
+    if (abort) {                                                            \
+      running_handle_close_errors = false;                                  \
+      make_C_HANDLER_entry_frame(O(handler_for_error), handle_close_errors, \
+                                 returner, goto end_ignore_errors; );       \
+    }                                                                       \
+    code;                                                                   \
+    if (abort) running_handle_close_errors = false;                         \
+   end_ignore_errors:                                                       \
+    if (abort) { unwind_C_HANDLER_frame(); }                                \
+  }
 
 
 /* Buffered-Output-Stream
@@ -9332,35 +9333,35 @@ local maygc char** lisp_completion (char* text, int start, int end) {
         pushSTACK(S(conversion_failure));
         var sp_jmp_buf returner;
         finish_entry_frame(CATCH,returner,, goto catch_return; );
-      }
-      /* Upon charset_type_error, call lisp_completion_ignore. */
-      make_C_HANDLER_frame(O(handler_for_charset_type_error),
-                           &lisp_completion_ignore,NULL);
-      { /* Convert ptr1 to *TERMINAL-ENCODING*: */
-        var uintL bytecount = cslen(O(terminal_encoding),ptr1,charcount);
-        begin_system_call();
-        var char* ptr2 = (char*) malloc((bytecount+1)*sizeof(char));
-        if (ptr2==NULL) { /* malloc fails -> return everything */
-          while (ptr != array) { free(*--ptr); }
-          free(array);
+        /* Upon charset_type_error, call lisp_completion_ignore. */
+        make_C_HANDLER_frame(O(handler_for_charset_type_error),
+                             &lisp_completion_ignore,NULL);
+        { /* Convert ptr1 to *TERMINAL-ENCODING*: */
+          var uintL bytecount = cslen(O(terminal_encoding),ptr1,charcount);
+          begin_system_call();
+          var char* ptr2 = (char*) malloc((bytecount+1)*sizeof(char));
+          if (ptr2==NULL) { /* malloc fails -> return everything */
+            while (ptr != array) { free(*--ptr); }
+            free(array);
+            end_system_call();
+            unwind_C_HANDLER_frame();
+            skipSTACK(3+1); /* unwind CATCH frame, pop mlist */
+            end_rl_callback();
+            return NULL;
+          }
           end_system_call();
-          unwind_C_HANDLER_frame();
-          skipSTACK(3+1); /* unwind CATCH frame, pop mlist */
-          end_rl_callback();
-          return NULL;
+          cstombs(O(terminal_encoding),ptr1,charcount,(uintB*)ptr2,bytecount);
+          ptr2[bytecount] = '\0';
+          *ptr++ = ptr2;
         }
-        end_system_call();
-        cstombs(O(terminal_encoding),ptr1,charcount,(uintB*)ptr2,bytecount);
-        ptr2[bytecount] = '\0';
-        *ptr++ = ptr2;
+        unwind_C_HANDLER_frame();
+      catch_return:
+        /* Here we need the values of array and ptr. Avoid gcc warnings. */
+        unused &array; /* avoid "'array' might be clobbered by 'longjmp'" */
+        unused &ptr;   /* avoid "'ptr' might be clobbered by 'longjmp'" */
+        skipSTACK(3); /* unwind CATCH frame */
+        STACK_0 = Cdr(STACK_0);
       }
-      unwind_C_HANDLER_frame();
-    catch_return:
-      /* Here we need the values of array and ptr. Avoid gcc warnings. */
-      unused &array; /* avoid "'array' might be clobbered by 'longjmp'" */
-      unused &ptr;   /* avoid "'ptr' might be clobbered by 'longjmp'" */
-      skipSTACK(3); /* unwind CATCH frame */
-      STACK_0 = Cdr(STACK_0);
     }
     skipSTACK(1); /* pop mlist */
     *ptr = NULL;
